fix: fix the homeLayout footer overlapping content

--- a/components/layouts/homeLayout/footer/Footer.module.scss
+++ b/components/layouts/homeLayout/footer/Footer.module.scss
@@ -4,10 +4,15 @@
   background-color: var(--header-bg);
   color: var(--header-fg);
   display: grid;
-  grid-template-columns: auto 1fr;
   user-select: none;
   transition: var(--transition);
   box-shadow: 0 0 0.5rem #00000088;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  grid-template-columns: auto 1fr auto;
+  @media (max-width: 800px) {
+    grid-template-columns: auto 1fr;
+  }
   > [data-branding] {
     display: flex;
     align-items: center;
@@ -15,34 +20,25 @@
     padding-left: 1rem;
     padding-right: 3rem;
     > h1 {
+      margin: 0;
       padding-left: 0.5rem;
     }
   }
-
-  > footer {
-    width: 100%;
-    height: 3rem;
-    background-color: var(--card-bg);
-    grid-column-start: 1;
-    grid-column-end: 3;
-    display: flex;
-    align-items: center;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    box-sizing: border-box;
-  }
   > section {
-    padding-left: 1rem;
     padding-right: 1rem;
+    padding-left: 1rem;
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 0.5rem;
     > a {
       padding-left: 1rem;
       padding-right: 1rem;
       padding-top: 0.5rem;
       padding-bottom: 0.5rem;
       border-radius: 100rem;
-      margin-right: 0.5rem;
       text-decoration: none;
       transition: var(--transition);
       background-color: var(--chip-bg);
@@ -55,9 +51,22 @@
         background-color: var(--chip-active-bg);
         color: var(--chip-active-fg);
       }
-      &:last-child {
-        margin-right: 0;
+      @media (max-width: 475px) {
+        &:nth-child(4) {
+          display: none;
+        }
       }
+    }
+  }
+  > span {
+    margin-left: auto;
+    place-self: center;
+    padding-right: 1rem;
+    display: flex;
+    @media (max-width: 800px) {
+      margin-left: 0;
+      grid-column: 1 / span 2;
+      padding-top: 1rem;
     }
   }
 }
