--- a/pages/globals.css
+++ b/pages/globals.css
@@ -136,7 +136,6 @@ body {
   padding: 0;
   font-family: 'roboto';
   font-weight: 400;
-  font-size: normal;
 }
 
 #__next {
