--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -1,10 +1,3 @@
-.root {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  min-height: 100%;
-}
-
 .section1 {
   background-color: var(--header-bg);
   display: grid;
@@ -14,24 +7,58 @@
   padding-top: 2.5rem;
   width: auto;
   max-height: 20rem;
+
   > div:first-child {
     display: flex;
     align-items: center;
     justify-content: right;
     width: 100%;
     max-height: 20rem;
+
+    > div {
+      height: 100%;
+      aspect-ratio: 16 / 9;
+      width: 75%;
+      background-color: var(--card-bg);
+      color: var(--card-fg);
+      border-radius: 1rem;
+      padding-left: 1rem;
+      padding-right: 1rem;
+      transition: var(--transition);
+    }
   }
 
-  > div:first-child > div {
-    height: 100%;
-    aspect-ratio: 16 / 9;
-    width: 75%;
-    background-color: var(--card-bg);
-    color: var(--card-fg);
-    border-radius: 1rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    transition: var(--transition);
+  > div:last-child {
+    display: flex;
+    flex-direction: column;
+    color: var(--header-fg);
+    width: auto;
+    margin: 0;
+    justify-content: center;
+
+    > h1 {
+      margin: 0;
+      font-size: 3rem;
+    }
+
+    > div {
+      display: flex;
+      align-items: center;
+      > a {
+        margin-left: 1rem;
+        color: var(--button-vibrant-bg);
+        text-decoration: none;
+        transition: var(--transition);
+      }
+
+      > a:hover {
+        color: var(--button-vibrant-hover-bg);
+      }
+
+      > a:active {
+        color: var(--button-vibrant-active-bg);
+      }
+    }
   }
 }
 
@@ -39,39 +66,6 @@
   .section1 > div:first-child > div {
     width: 50%;
   }
-}
-
-.section1 > div:last-child {
-  display: flex;
-  flex-direction: column;
-  color: var(--header-fg);
-  width: auto;
-  margin: 0;
-  justify-content: center;
-}
-
-.section1 > div:last-child > h1 {
-  margin: 0;
-  font-size: 3rem;
-}
-
-.section1 > div:last-child > div {
-  display: flex;
-  align-items: center;
-}
-
-.section1 > div:last-child > div > a {
-  margin-left: 1rem;
-  color: var(--button-vibrant-bg);
-  text-decoration: none;
-}
-
-.section1 > div:last-child > div > a:hover {
-  color: var(--button-vibrant-hover-bg);
-}
-
-.section1 > div:last-child > div > a:active {
-  color: var(--button-vibrant-active-bg);
 }
 
 .section2 {
@@ -93,6 +87,12 @@
     border-radius: var(--card-rounding);
     padding-bottom: 6rem;
     position: relative;
+    border: solid 0.125rem var(--card-bg);
+    transition: var(--transition);
+
+    &:hover {
+      border: solid 0.125rem #ffffff55;
+    }
 
     > h2 {
       margin: 1rem;
@@ -133,6 +133,7 @@
   max-width: 80rem;
   display: flex;
   gap: 1rem;
+
   > div {
     flex-grow: 1;
     color: var(--card-fg);
@@ -141,6 +142,13 @@
     display: flex;
     flex-direction: column;
     border-radius: var(--card-rounding);
+    border: solid 0.125rem var(--card-bg);
+    transition: var(--transition);
+
+    &:hover {
+      border: solid 0.125rem #ffffff55;
+    }
+
     > :first-child {
       margin-bottom: 1rem;
       font-size: 1.75rem;
@@ -167,9 +175,5 @@
 
   .section2 {
     grid-template-columns: 1fr;
-  }
-
-  .section3 {
-    flex-direction: column;
   }
 }
